# fhrs

./: .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml  rustfmt.toml
src/: lib.rs
tests/: test_histogram.py
