[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "fhrs"
version = "0.1.0.dev0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "numpy>=2.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.9.4",
    "pygram11>=0.13.3",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]
